--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#CD577F</color>
+    <color name="gray">#CCC9CA</color>
+    <color name="red">#FF0000</color>
 </resources>
